--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ markdown: kramdown
 url: http://nylnd.github.io
 title: Tax/Code
 tagline: Training data science tools on tax/legal problems
-description: Chris is a tax lawyer at Wragge Lawrence Graham & Co LLP, with a keen interest in Scientific Python and in plain English
+description: Chris is a UK-based tax lawyer and a frequent speaker on property tax issues.   In his spare time he muses about, tinkers with,  and creates software - and blogs about it in a personal capacity.  
 paginate: 5
